# theravillage

./: .env  .gitignore  DEPLOYMENT.md  DEVELOPMENT.md  Makefile  README.md  clear_tables.sql  docker-compose.yml  env.local  firebase.json  pnpm-lock.yaml
apps/web/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
apps/web/src/: App.css  App.jsx  firebase.js  index.css
apps/web/src/components/: AddNewClient.css  AddNewClient.jsx  AdminPanel.css  AdminPanel.jsx  AgencyDashboard.css  AgencyDashboard.jsx  AppointmentDetailsPopup.css  AppointmentDetailsPopup.jsx  AvailableSlotsView.css  AvailableSlotsView.jsx  ClientCalendar.css  ClientCalendar.jsx  ClientDashboard.css  ClientDashboard.jsx  ClientManagement.css  ClientManagement.jsx  ClientProfile.css  ClientProfile.jsx  ClientProfile.jsx.backup  ClientProfileCompletion.css  ClientProfileCompletion.jsx  ExerciseLibrary.css  ExerciseLibrary.jsx  Header.css  Header.jsx  InvitationAccept.css  InvitationAccept.jsx  MainApp.css  MainApp.jsx  Notification.css  Notification.jsx  RecentRequests.css  RecentRequests.jsx  RoleSelection.css  RoleSelection.jsx  ScheduleAppointment.css  ScheduleAppointment.jsx  TherapistCalendar.css  TherapistCalendar.jsx  TherapistDashboard.css  (+7 more)
apps/web/src/config/: firebase.js
apps/web/src/contexts/: AuthContext.jsx
infra/terraform/: .terraform.lock.hcl  backend.tf  main.tf  terraform.tfvars.template  variables.tf  versions.tf
public/: index.html
public/assets/: index-7t_h8lyJ.js  index-B7K2ZouW.css  index-BVUb7J8a.js  index-C65mz8EJ.js  index-CbbZizBJ.css  index-CrPqWyGu.js  index-Cyjrcrx_.css  index-CzHsun8b.css  index-D0GFDnwz.js  index-xvFRbO7c.js
services/ai/: Dockerfile  README.md  pyproject.toml
services/ai/app/: __init__.py  ai_service.py  main.py  models.py  prompts.py
services/api/: Dockerfile  Dockerfile.dev  migrate_db.py  migrate_schema.py  pyproject.toml  seed_data.py
services/api/app/: db.py  main.py  schemas.py  security.py  timezone_utils.py  user_deletion_service.py
services/api/app/routers/: admin.py  ai.py  auth.py  calendar.py  client.py  health.py  therapist.py
services/api/migrations/: 001_initial_schema.sql  20250902_123132_sessions.sql
services/cloud_functions/: index.js  package.json
services/scraper/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml
services/scraper/app/: cleanup_job.py  cleanup_runner.py  database.py  job_runner.py  main.py  tavily_runner.py
services/scraper/app/external_services/: cloud_tasks_manager.py  tavily_client.py  topic_seeder.py
services/scraper/app/models/: jobs.py  tavily.py  topics.py  treatments.py
services/scraper/app/services/: cloud_tasks_manager.py  tavily_client.py  topic_seeder.py
