[tool.poetry]
name = "scraper"
version = "0.1.0"
description = "Treatment content scraper service for TheraVillage"
authors = ["Daniel Nurieli <daniel_nurieli@alumni.brown.edu>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"

# Scraping and AI
tavily-python = "^0.3.0"
openai = "^1.3.7"
tiktoken = "^0.5.1"

# Vector database
pgvector = "^0.2.4"
numpy = "^1.24.3"

# Utilities
httpx = "^0.25.0"
python-multipart = "^0.0.6"
google-cloud-secret-manager = "^2.20.0"
google-cloud-tasks = "^2.16.0"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
